# HomeAssistantAI

./: Dockerfile.txt  README.md  TESTING.md  add_demo_data.py  build.yaml  config.yaml  create_db.py  create_tables.py  main.py  openai_helper.py  pyproject.toml  repository.json  repository.yaml  requirements.txt  run.sh
attached_assets/: Pasted--Nexus-AI-Full-Add-on-Build-Specification-for-Replit-AI-Use-this-entire-document-in-Replit-AI-1744168978080.txt
data/chromadb/: chroma.sqlite3
data/db/: memory.db
dev/: Dockerfile
nexus/: agent.py  calendar.py  database.py  ha_api.py  main.py  memory.py  openai_helper.py
nexus-ai-addon/: .gitignore  CHANGELOG.md  DOCS.md  Dockerfile  Dockerfile.txt  HACS_INSTALLATION.md  INSTALLATION.md  LICENSE  README.md  __init__.py  build.yaml  config.json  config.yaml  hacs.json  install.sh  repository.json  requirements.txt  run.sh
nexus-ai-addon/.github/workflows/: addon-ci.yml
nexus-ai-addon/nexus/: __init__.py  agent.py  calendar.py  database.py  ha_api.py  main.py  memory.py  models.py  openai_helper.py
nexus-ai-addon/nexus/database/: __init__.py  init.py
nexus-ai-addon/nexus/static/: index.html  modern-script.js  modern-ui.html  modern-ui.html.bak  modern.css  styles.css
nexus-ai-frontend/: package.json  tsconfig.json
nexus-ai-frontend/src/: app.html
nexus/static/: index.html  scripts.js  style.css
nexus/templates/: index.html
nexus/tools/: automation.py
nexus/voice/: stt.py  tts.py
static/: modern-script.js  modern-ui.html  script.js
templates/: base.html  dashboard.html
(+16 files in other folders)
